--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -12,6 +12,7 @@ pyo3 = { version = "0.19.2", features = ["extension-module", "generate-import-li
 numpy = "0.19.0"
 you-can = "0.0.14"
 static_assertions = "1.1.0"
+indoc = "2.0.4"
 
 [build-dependencies]
 cc = "1.0.83"
