--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -14,6 +14,7 @@ you-can = "0.0.14"
 static_assertions = "1.1.0"
 indoc = "2.0.4"
 cc = "1.0.83"
+anyhow = "1.0.75"
 
 [build-dependencies]
 cc = "1.0.83"
