--- a/snippets/Cargo.toml
+++ b/snippets/Cargo.toml
@@ -15,6 +15,8 @@ static_assertions = "1.1.0"
 indoc = "2.0.4"
 cc = "1.0.83"
 anyhow = "1.0.75"
+log = "0.4.20"
+simple_logger = "4.2.0"
 
 [build-dependencies]
 cc = "1.0.83"
